<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.DataEntryActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/etNin"
            android:hint="@string/nin_hint"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etFirstName"
            android:hint="@string/first_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etLastName"
            android:hint="@string/last_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etGender"
            android:hint="@string/gender_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etEmail"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etDob"
            android:hint="@string/dob_yyyy_mm_dd_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etFepName"
            android:hint="@string/fep_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etFepCode"
            android:hint="@string/fep_code_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etState"
            android:hint="@string/state_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_label"/>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/continue_next"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
